<resources>
    <string name="app_name">Aplicación_Temática_Libre</string>
    <string name="nombre">Introduzca su usuario</string>
    <string name="nombre_concesionario">Concesionario Ramiro</string>
    <string name="contraseña">Introduzca su contraseña</string>
    <string name="btn_acceder">ACCEDER</string>
    <string name="crear_cuenta">¿AUN NO TIENES CUENTA?</string>

    <string name="Correo">Introduzca su correo</string>
    <string name="Nombre_propio">Introduzca su nombre</string>
    <string name="apellido">Introduzca su apellido</string>
    <string name="sexo">Introduzca su genero</string>
    <string name="Verificar_contr">Verifique su contraseña</string>
    <string name="btn_crear">CREAR</string>

    <string name="crear">Introduzca sus datos</string>

    <string name="Masculino">Soy Hombre</string>
    <string name="Femenino">Soy Mujer</string>
    <string name="Otros">Otros</string>
</resources>