<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Crear_cuenta"
    tools:layout_editor_absoluteX="-2dp"
    tools:layout_editor_absoluteY="85dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="450dp"
        android:layout_height="900dp"
        android:rotation="-19"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/marca_ruedas" />

    <EditText
        android:id="@+id/et_usuario"
        android:textColor="@color/letras_principales"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/letras_barra"
        android:textStyle="bold"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColorHint="@color/letras_principales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_genero" />

    <EditText
        android:id="@+id/et_contraseñaCrear"
        android:textStyle="bold"
        android:textColor="@color/letras_principales"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/letras_barra"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textColorHint="@color/letras_principales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_usuario" />

    <EditText
        android:id="@+id/et_contraseñaVerificar"
        android:layout_width="300dp"
        android:textStyle="bold"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/letras_principales"
        android:backgroundTint="@color/letras_barra"
        android:ems="10"
        android:hint="@string/Verificar_contr"
        android:inputType="textPassword"
        android:textColorHint="@color/letras_principales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_contraseñaCrear" />

    <Button
        android:id="@+id/btn_crear"
        android:layout_width="299dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/transparente_boton"
        android:onClick="Crear"
        android:text="@string/btn_crear"
        android:textColor="@color/boton_fondo"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_contraseñaVerificar"
        app:strokeColor="@color/boton_fondo"
        app:strokeWidth="3dp" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="300dp"
        android:textStyle="bold"
        android:textColor="@color/letras_principales"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/letras_barra"
        android:ems="10"
        android:hint="@string/Nombre_propio"
        android:inputType="text"
        android:textColorHint="@color/letras_principales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_apellido"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/letras_principales"
        android:backgroundTint="@color/letras_barra"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="text"
        android:textColorHint="@color/letras_principales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="300dp"
        android:textStyle="bold"
        android:textColor="@color/letras_principales"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/letras_barra"
        android:ems="10"
        android:hint="@string/Correo"
        android:inputType="text"
        android:textColorHint="@color/letras_principales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_apellido" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/crear"
        android:textColor="@color/boton_fondo"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_genero"
        android:layout_width="314dp"
        android:layout_height="54dp"

        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rb_hombre"
            android:layout_width="124dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/Masculino"
            android:textColor="@color/letras_principales"
            app:buttonTint="@color/boton_fondo" />

        <RadioButton
            android:id="@+id/rb_mujer"
            android:layout_width="108dp"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:text="@string/Femenino"
            android:textColor="@color/letras_principales"
            app:buttonTint="@color/boton_fondo" />

        <RadioButton
            android:id="@+id/rb_otros"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/Otros"
            android:textColor="@color/letras_principales"
            app:buttonTint="@color/boton_fondo"
            android:checked="true"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/sexo"
        android:textStyle="bold"
        android:textColor="@color/letras_principales"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_correo" />


</androidx.constraintlayout.widget.ConstraintLayout>